tweaks, new unit and unciv eq

--- a/localisation/english/PB_equipment_l_english.yml
+++ b/localisation/english/PB_equipment_l_english.yml
@@ -30,6 +30,9 @@
  infantry_equipment:0 "Infantry Equipment"
  infantry_equipment_short:0 "Infantry Eq."
  infantry_equipment_desc:0 "Personal and crew served weapons for infantry as well as the various other bits of kit a soldier needs."
+ infantry_equipment_victorian:0 "Early Victorian Infantry Equipment"
+ infantry_equipment_victorian_short:0 "Early Vic. Weapons"
+ infantry_equipment_victorian_desc:0 " "
  infantry_equipment_0:0 "Great War Infantry Equipment"
  infantry_equipment_0_short:0 "Great War Weapons"
  infantry_equipment_0_desc:0 "Basic infantryman equipment developed before and during the Great War."
@@ -459,7 +462,7 @@
 
   ## AUTOMATS TAB
 
- gw_automat_archetype:0 "Automats"
+ gw_automat_archetype:0 "Duopods"
  gw_automat_0:0 "Great War Automat"
  gw_automat_0_desc:0 "The Great War spawned many new creations in warfare, the most famous one being the Automat Machines. Developed to outflank the enemy and accurately hit static enemy targets, the Automat is one of the greatest breakthroughs in military history. However the Great War Designs have several flaws. The armor is too thin, the structure too unreliable, the engines consume to much fuel for a short distance and furthermore there are still problems with the stability of the legs. But it is solid foundation. A foundation which we can improve upon."
  gw_automat_archetype_desc:0 "The Great War spawned many new creations in warfare, the most famous one being the Automat Machines. Developed to outflank the enemy and accurately hit static enemy targets, the Automat is one of the greatest breakthroughs in military history. However the Great War Designs have several flaws. The armor is too thin, the structure too unreliable, the engines consume to much fuel for a short distance and furthermore there are still problems with the stability of the legs. But it is solid foundation. A foundation which we can improve upon."
@@ -490,6 +493,9 @@
 
  artillery_equipment:0 "Artillery Equipment"
  artillery_equipment_desc:0 ""
+ artillery_equipment_victorian:0 "Early Victorian Artillery"
+ artillery_equipment_victorian_short:0 "Early Vic. Artillery"
+ artillery_equipment_victorian_desc:0 " "
  artillery_equipment_1:0 "Towed Artillery"
  artillery_equipment_1_short:0 "Artillery"
  artillery_equipment_1_desc:0 "Artillery refers to large-caliber weapons, such as cannons and howitzers that are operated by crews, which can project munitions far beyond the effective range of personal weapons."
@@ -526,9 +532,12 @@
  anti_tank_equipment:0 "Towed Anti-Tank"
  anti_tank_equipment_short:0 "Anti-Tank"
  anti_tank_equipment_desc:0 "Artillery specialized in defeating armored targets like Tanks, it generally fires armor piercing shells."
- rocket_artillery_equipment:0 "Towed Rocket Artillery"
- rocket_artillery_equipment_short:0 "Rocket Artillery"
- rocket_artillery_equipment_desc:0 "Rocket artillery is less accurate and has a much lower sustained rate of fire than batteries of traditional artillery guns. However, they have the capability of simultaneously hitting a target with multiple rockets with devastating effect."
+ motorized_rocket_equipment:0 "Motorized Rocket Artillery"
+ motorized_rocket_equipment_short:0 "Mot. R. Artillery"
+ motorized_rocket_equipment_desc:0 "Multiple rocket launchers such as these deliver explosives to a target area more quickly than conventional artillery, but with lower accuracy and requiring a longer time to reload. Being mounted on trucks, this version is able to launch attacks and change positions before the enemy can return fire."
+ motorized_rocket_equipment_1:0 "Motorized Rocket Artillery"
+ motorized_rocket_equipment_1_short:0 "Mot. R. Artillery"
+ motorized_rocket_equipment_1_desc:0 "Multiple rocket launchers such as these deliver explosives to a target area more quickly than conventional artillery, but with lower accuracy and requiring a longer time to reload. Being mounted on trucks, this version is able to launch attacks and change positions before the enemy can return fire."
 
   ## HORRORS TAB
 
