--- a/localisation/english/PB_units_l_english.yml
+++ b/localisation/english/PB_units_l_english.yml
@@ -17,6 +17,9 @@
  gunslingers:0 "Gunslingers"
  gunslingers_desc:0 "Specialized Western Forces, Yee and Haw included"
 
+ semi_motorized_cavalry: "Semi-Motorized Cavalry"
+ semi_motorized_cavalry_desc: "Unit that consists of both horseback infantry as well as trucks. Something in between the two."
+
   ## AUGMENTED UNITS ##
 
  group_augmented_bioeng_title:0 "Augmented & Bioeng. Battalions"
