--- a/localisation/english/replace/PB_replace_l_english.yml
+++ b/localisation/english/replace/PB_replace_l_english.yml
@@ -140,3 +140,22 @@
   # CHARACTERS
   ##########################
   ENG_harry_pollitt: "Harry Pollitt" ##idk why its broken
+
+
+  ##########################
+  # CAREER PROFILE
+  ##########################
+  CAREER_PROFILE_LARGEST_TANKS_BATTLE_LABEL:0 "Most landships in battle"
+  CAREER_PROFILE_BUILT_TANKS_LABEL:0 "Landships built"
+  CAREER_PROFILE_DESIGNED_TANKS_LABEL:0 "Landships designed"
+
+  CAREER_PROFILE_STEEL_AT_HIGH_SPEED_DESCRIPTION:0 "Deploy over 4000 landships with a Max Speed over 12km/h."
+  CAREER_PROFILE_ORCHESTRA_OF_BOOM_DESCRIPTION:0 "Deploy a division containing at least one battalion of "Anti-Air", "Artillery", "Rocket Artillery" and "Anti-Landship", supported by a signal company."
+
+  CAREER_PROFILE_TANK_PRODUCTION:0 "Landship Production"
+  CAREER_PROFILE_LIGHT_TANK_LABEL:0 "Light Landships"
+  CAREER_PROFILE_MEDIUM_TANK_LABEL:0 "Medium Landships"
+  CAREER_PROFILE_HEAVY_TANK_LABEL:0 "Heavy Landships"
+  CAREER_PROFILE_SUPER_HEAVY_TANK_LABEL:1 "Super-Heavy Landships"
+  CAREER_PROFILE_MODERN_TANK_LABEL:0 "Modern Landships"
+  CAREER_PROFILE_TRIGGER_DEPLOYED_TANKS_WITH_ARMOR_RATING:0 "$VALUE|0H$ landships with $TOOLTIP_VALUE|0H$ armor rating"
