fixed unlocking primordiforms units

--- a/localisation/english/PB_equipment_l_english.yml
+++ b/localisation/english/PB_equipment_l_english.yml
@@ -542,12 +542,16 @@
   ## HORRORS TAB
 
  combatagate_equipment:0 "Combatagates"
- combatagate_equipment_0:0 "Combatagate Primordiforms"
+ combatagate_equipment_0:0 "Experimental Combatagate"
  combatagate_equipment_0_desc:0 "Created in the 1920s due to failed cattle yield experiments, Combatagates function as biological shock cavalry. The creatures are released on the enemy in a highly agitated state, and after between twelve to fourteen hours will die from organ failure via an imprinted biological timer, requiring little cleanup or need for extermination."
  combatagate_equipment_1:0 "Combatagate Assault Forms"
  combatagate_equipment_1_desc:0 "Created either to spit in the face of god or prove he has abandoned us, Assault Combatagates are the unnatural evolution of Amalgate Genetics. Less of a real animal and more a violent soup of genes, new model Combatagates are extremely unstable and begin to decompose within minutes of oxygen exposure. The existential horror of their approaching death seems to improve combat performance."
  combatagate_equipment_2:0 "Venator Class Amalgamate"
  combatagate_equipment_2_desc:0 "Nicknamed Venators, latin for Hunter, these Amalgamates are the cutting edge of bio-genetic science. Every cell and molecule is meticulously designed to maximize killing potential and combat sustainability. Higher brain functions remain dulled, allowing handlers to direct swarms using chemical markers and electric shocks."
+
+ primordiform_equipment:0 "Primordiform Amalgamates"
+ primordiform_equipment_desc:0 "Traditionally, primates or primate adjacent species are avoided when mixing genetics. Frankly  this is short-sighted and unimaginative, and thus the Primordiform was born. An unholy union of ape, human and mutated DNA, these  armed creatures are exceptional shock cavalry."
+ primordiform_equipment_0:0 "Primordiform Amalgamates"
 
  hardsuit_equipment:0 "Hardsuit"
  hardsuit_equipment_desc:0 "$hardsuit_desc$"
