South American cultures

--- a/localisation/english/PB_Culture_l_english.yml
+++ b/localisation/english/PB_Culture_l_english.yml
@@ -506,14 +506,14 @@ PB_culture_102: "Khakas"
 
 # SOUTH AMERICA #
 PB_culture_103: "Amazonian"
-PB_culture_104: "Argentinean"
+PB_culture_104: "Arroyan"
 PB_culture_105: "Charcan"
 PB_culture_106: "Brazilian"
 PB_culture_107: "Chilean"
 PB_culture_108: "Cisplatine"
-PB_culture_109: "Colombian"
-PB_culture_110: "Colozonian"
-PB_culture_111: "Ecuadorian"
+PB_culture_109: "Neogranadino"
+PB_culture_110: "La Platan"
+PB_culture_111: "Quiteño"
 PB_culture_112: "Equatorilian"
 PB_culture_113: "Guyanese"
 PB_culture_114: "Mapuche"
@@ -521,12 +521,12 @@ PB_culture_115: "Paraguayan"
 PB_culture_116: "Peruvian"
 PB_culture_117: "Quechua"
 PB_culture_118: "Riograndese"
-PB_culture_119: "Venezuelan"
+PB_culture_119: "American"
 PB_culture_120: "Surinamese"
 
 # CENTRAL AMERICA #
 PB_culture_121: "Belizean"
-PB_culture_122: "C. Colombian"
+PB_culture_122: "New Spanish"
 PB_culture_123: "Guatemalan"
 PB_culture_124: "Honduran"
 PB_culture_125: "Nicaraguan"
