--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -2278,22 +2278,22 @@
     BHA_cn_ADJ:0 "Bahian"
     BHA_an_ADJ:0 "Bahian"
 
-    PAR_ni:0 "Sovereign Republic of Paraguarani"
-    PAR_ni_DEF:0 "The Sovereign Republic of Paraguarani"
-    PAR_ds:0 "Sovereign Republic of Paraguarani"
-    PAR_ds_DEF:0 "The Sovereign Republic of Paraguarani"
-    PAR_rc:0 "Sovereign Republic of Paraguarani"
-    PAR_rc_DEF:0 "The Sovereign Republic of Paraguarani"
-    PAR_an:0 "Sovereign Republic of Paraguarani"
-    PAR_an_DEF:0 "The Sovereign Republic of Paraguarani"
-    PAR_cn:0 "Sovereign Republic of Paraguarani"
-    PAR_cn_DEF:0 "The Sovereign Republic of Paraguarani"
-    PAR_lb:0 "Sovereign Republic of Paraguarani"
-    PAR_lb_DEF:0 "The Sovereign Republic of Paraguarani"
-    PAR_ss:0 "Sovereign Republic of Paraguarani"
-    PAR_ss_DEF:0 "The Sovereign Republic of Paraguarani"
-    PAR_jc:0 "Sovereign Republic of Paraguarani"
-    PAR_jc_DEF:0 "The Sovereign Republic of Paraguarani"
+    PAR_ni:0 "Republic of Saints"
+    PAR_ni_DEF:0 "The Republic of Saints"
+    PAR_ds:0 "Republic of Saints"
+    PAR_ds_DEF:0 "The Republic of Saints"
+    PAR_rc:0 "Republic of Saints"
+    PAR_rc_DEF:0 "The Republic of Saints"
+    PAR_an:0 "Republic of Saints"
+    PAR_an_DEF:0 "The Republic of Saints"
+    PAR_cn:0 "Republic of Saints"
+    PAR_cn_DEF:0 "The Republic of Saints"
+    PAR_lb:0 "Republic of Saints"
+    PAR_lb_DEF:0 "The Republic of Saints"
+    PAR_ss:0 "Republic of Saints"
+    PAR_ss_DEF:0 "The Republic of Saints"
+    PAR_jc:0 "Republic of Saints"
+    PAR_jc_DEF:0 "The Republic of Saints"
     PAR_ni_ADJ:0 "Paraguarani"
     PAR_rc_ADJ:0 "Paraguarani"
     PAR_lb_ADJ:0 "Paraguarani"
