--- a/localisation/english/PB_Culture_l_english.yml
+++ b/localisation/english/PB_Culture_l_english.yml
@@ -517,11 +517,11 @@ PB_culture_111: "Quiteño"
 PB_culture_112: "Equatorilian"
 PB_culture_113: "Guyanese"
 PB_culture_114: "Mapuche"
-PB_culture_115: "Paraguayan"
+PB_culture_115: "Paraguarani"
 PB_culture_116: "Peruvian"
 PB_culture_117: "Quechua"
 PB_culture_118: "Riograndese"
-PB_culture_119: "American"
+PB_culture_119: "Colombian"
 PB_culture_120: "Surinamese"
 
 # CENTRAL AMERICA #
