--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -611,6 +611,8 @@
  VICTORY_POINTS_9787: "Viseu"
 #182 - CRETE
  VICTORY_POINTS_9940: "Heraklion"
+ VICTORY_POINTS_12058: "Chania"
+ VICTORY_POINTS_4170: "Ierapetra"
 #183 - CYPRUS
  VICTORY_POINTS_7193: "Nicosia"
 #184 - WEST THRACE
