better roma and vatican placement

--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -4,8 +4,8 @@
 #1 - CORSICA
  VICTORY_POINTS_3838: "Ajáccio"
 #2 - LATIUM
- VICTORY_POINTS_11846: "Anzio"
- VICTORY_POINTS_9904: "Rome"
+ VICTORY_POINTS_15803: "Anzio"
+ VICTORY_POINTS_15586: "Roma"
 #3 - WESTERN SWITZERLAND
  VICTORY_POINTS_15787: "Basel"
  VICTORY_POINTS_9620: "Berne"
@@ -3597,7 +3597,6 @@
  VICTORY_POINTS_10919:0 "Porto-Novo"
  VICTORY_POINTS_10862:0 "Accra"
 
- VICTORY_POINTS_9904:0 "Roma"
  VICTORY_POINTS_3780:0 "Milano"
  VICTORY_POINTS_819:0 "Napoli"
  VICTORY_POINTS_6626:0 "Triest"
@@ -4278,7 +4277,7 @@
 
  VICTORY_POINTS_12642:0 "Historia"
  VICTORY_POINTS_1827:0 "Shaysville"
- VICTORY_POINTS_11846:0 "Anzio"
+
  VICTORY_POINTS_12003:0 "Valletta"
  VICTORY_POINTS_12068:0 "Gaoxiong"
  VICTORY_POINTS_12725:0 "Port Sudan"
