vps and map adjust

--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -5,6 +5,7 @@
  VICTORY_POINTS_3838: "Ajáccio"
 #2 - LATIUM
  VICTORY_POINTS_15803: "Anzio"
+ VICTORY_POINTS_11751: "  Civitavecchia"
  VICTORY_POINTS_15586: "Roma"
 #3 - WESTERN SWITZERLAND
  VICTORY_POINTS_15787: "Basel"
