--- a/localisation/english/PB_Parties_l_english.yml
+++ b/localisation/english/PB_Parties_l_english.yml
@@ -3,9 +3,8 @@
  ni:0 "Neo Imperialists"
  ni_noun:0 "Neo Imperialists"
  ni_desc:0 "Ultranationalist State"
- NI_VARIANT_01:0 "§ONew Imperialists§!"
+ NI_VARIANT_01:0 "§ONeo Imperialists§!"
  NI_VARIANT_01_desc:0 "\n\n£GFX_ideology_neo_imperialist_banner\n\n\n\n§Y“War is the health of the State.”§!\n-§ORandolph Bourne§!\n\n§ONeo-Imperialism§! emerged as a reaction to the Great War and the Second Renaissance. The world was torn asunder by the very technology that had once uplifted it, millions died meaningless deaths, ground up by the machinery they'd built to better their world. The ouroboros of empire forever consuming itself amidst the ashes of a better future that would never arive.\n\nOut of the ashes came a generation of nihilists, disenchanted with the glossy future promised by Tesla and Edison. The future needed to be taken back, clutched in the bloodied hands of the people it was stolen from. The doctrine of Neo-Imperialism, through never codified as a coherent ideology, became violent expansionist revanchism. The most prominent version of this, naturally, rose from the destruction of the Bourbon Empire and the Latin Bloc. Various subdivisions exist, differentiating between specifics, but amongst all there remains the guiding principle that the gods of steel and light were false ones.\n\nOnly though a great §rbloodletting§! can the true future be born."
- ni_drift:0 "Daily drift towards Neo Imperialism"
 
  NI_VARIANT_02:0 "§OUltranationalism§!"
  NI_VARIANT_02_desc:0 "\n\n£GFX_ideology_neo_imperialist_banner_02\n\n\n\n§Y“War is not violence and killing, pure and simple; war is controlled violence, for a purpose.”§!\n-§OCharles Zim§!\n\n§OUltranationalism§! is a form of extreme nationalism focusing on the importance of one state or racial group above all others. Unlike Neo-Imperialism, Ultranationalism is not couched in Victorian concepts of racial superiority. Instead, it focuses on a xenophobic distrust of other races, seeking to eliminate them alltogether rather than forcefully assimilate them. Many ultranationalists hold a mythologized view of their national history, drawing on ancient or even mythical origin stories to build an extremist mythology around their people."
@@ -92,7 +91,6 @@
 DS_VARIANT_15:0 "§OEcclesiastical Militarism§!"
  DS_VARIANT_15_desc:0 "\n\n£GFX_ideology_despotist_banner_07\n\n\n\n§Y“Blessed be the Lord, my rock, who trains my hands for war, and my fingers for battle”§!\n-§OPsalm 144:1§!\n\nA fusion of religious doctrine and martial discipline, §OEcclesiastical Militarism§! upholds the belief that warfare is not only a necessity but a divine mandate. The state is governed by a holy order, theocratic rulers, or a militarized clergy, viewing military service as both a sacred duty and a form of devotion. \n\nThis ideology promotes unwavering loyalty, crusader-like fervor, and the belief that victory is ordained by divine will. While it inspires fanatical devotion among its followers, it also breeds hostility towards those deemed heretical or faithless. The state's policies prioritize military expansion, religious unity, and the suppression of ideological dissent, ensuring that both the sword and scripture shape the destiny of the nation."
 
- ds_drift:0 "Daily drift towards Despotism"
 
  rc:0 "Reactionaries"
  rc_noun:0 "Reactionaries"
@@ -121,7 +119,6 @@ DS_VARIANT_15:0 "§OEcclesiastical Militarism§!"
  RC_VARIANT_08:0 "§OLund Conservatism§!
  RC_VARIANT_08_desc:0 "\n\n£GFX_ideology_reactionary_banner_06\n\n\n\n§Y“All moral commandments, all humanity are superstition and magic; only the animal-human is of interest as an object of study and observation”§!\n-§OElmo Lindholm§!\n\nHaving took shape throughout the 20's, §OLund Conservatism§! represents an openly reactionary, yet rejuvenated approach on Swedish nationalism. \n\nAs past absolutism had long withered away under the malignant influence of the Reformation Era, and mainstream conservatism appeared more and more bloated by parliamentarianism as such, young intellectuals which did not fall for the democratic mirage would turn themselves toward new strains of reaction taking roots abroad. Drawing from the teachings of Charles Maurras and his relentless criticism of the Reformation Era, this new generation of militants would soon espouse both the modernity of chauvinism and quasi-feudal views on matters of social organization, paving the way for a fruitful synthesis between the ancient and the new. \n\nAgainst both the revolutionary conflagration and the icy water of egotistical calculation, Lund conservatism champions the ideal of a corporatist, highly hierarchical yet charitable regime in which Christian solidarity, the centrality of the monarch and a resurrected Catholic Church would act as moral beacons for the folk. Along these traits, the emphasis put on romanticism and the significance of the irrational makes it stand out as vividly opposed to the Second Renaissance's excesses — sometimes bordering Luddism in that regard. \n\nShould Lund Conservatism's proponents succeed in restoring both Catholicism and the so-called “natural inequalities” in a land long corrupted by Lutheranism and decadent liberalism remain to be seen."
  
- rc_drift:0 "Daily drift towards Reactionary"
 
  cn:0 "Conservatives"
  cn_noun:0 "Conservatives"
@@ -154,7 +151,6 @@ DS_VARIANT_15:0 "§OEcclesiastical Militarism§!"
  CN_VARIANT_09:0 "§OFatimism§!"
  CN_VARIANT_09_desc:0 "\n\n£GFX_ideology_conservatism_banner_08\n\n\n\n§Y“Behold, I am the handmaid of the Lord; let it be to me according to your word.”§!\n-§OGospel of Luke§!\n\nFatimism is a Christian theological and political ideology that emerges from belief in the Fatima Event, the series of Marian apparitions reported by three shepherd children in 1917 in Fatima, Portugal. Fatimists view these apparitions as divine revelations that not only reinforce traditional Catholic teachings but also contain prophetic warnings and prescriptions for global politics. Central to Fatimism is the conviction that nations must adhere to the moral and spiritual directives given by the Virgin Mary at Fatima—particularly the call for repentance, prayer (especially the Rosary), and the consecration of Russia to the Immaculate Heart of Mary—to ensure world peace and prevent divine chastisement. This ideology often emphasizes a struggle between Christian civilization and secular or anti-Christian forces, advocating for a political order rooted in Catholic principles.\n\nIn its most radical expressions, Fatimism can take on apocalyptic or millenarian tones, viewing world events through the lens of Fatima’s warnings and anticipating divine intervention in global affairs."
 
- cn_drift:0 "Daily drift towards Conservatism"
 
  lb:0 "Liberals"
  lb_noun:0 "Liberals"
@@ -189,9 +185,7 @@ DS_VARIANT_15:0 "§OEcclesiastical Militarism§!"
 
  LB_VARIANT_10:0 "§OInfinistocracy§!"
  LB_VARIANT_10_desc:0 "\n\n£GFX_ideology_neo_imperialist_banner_09\n\n\n\n§Y“Illuminism is becoming a great and formidable power, and I fear, in my conscience, that kings and peoples will have much to suffer from it unless foresight and prudence break its frightful mechanism.”§!\n-§OFrancois Charles de Berckheim§!\n\n§OInfinistocracy§! is not an ideology or a system of governance, but an ideal. For centuries, the world has trended towards anarchy under the rule of peasants, demanding greater and greater rights to destroy themselves with increasing effectiveness. With the advent of Recursive Immortality, this will no longer be an issue. The old guard, the captains of industry, the true power behind the nation have shed the shackles of mortality.\n\nA guiding hand now controls the wheel of society, whether it is aware of it or not is irrelevant. Those whose hands are on the wheel are beyond death, and with the restrictions of mortality shed, a new long-term vision for humanity comes into view.\n\nThe meek will beget the strong; the unwashed masses will be led, as they once were, into a shining future built on the blueprints of a deathless conspiracy.\n\n§rThe future only belongs to those who will live to see it.§!"
- 
 
- lb_drift:0 "Daily drift towards Liberalism"
 
  an:0 "Anarcho-Liberals"
  an_noun:0 "Anarcho-Liberals"
@@ -219,14 +213,11 @@ DS_VARIANT_15:0 "§OEcclesiastical Militarism§!"
  AN_VARIANT_07_desc:0 "\n\n£GFX_ideology_neo_imperialist_banner_09\n\n\n\n§Y“Illuminism is becoming a great and formidable power, and I fear, in my conscience, that kings and peoples will have much to suffer from it unless foresight and prudence break its frightful mechanism.”§!\n-§OFrancois Charles de Berckheim§!\n\n§OInfinistocracy§! is not an ideology or a system of governance, but an ideal. For centuries, the world has trended towards anarchy under the rule of peasants, demanding greater and greater rights to destroy themselves with increasing effectiveness. With the advent of Recursive Immortality, this will no longer be an issue. The old guard, the captains of industry, the true power behind the nation have shed the shackles of mortality.\n\nA guiding hand now controls the wheel of society, whether it is aware of it or not is irrelevant. Those whose hands are on the wheel are beyond death, and with the restrictions of mortality shed, a new long-term vision for humanity comes into view.\n\nThe meek will beget the strong; the unwashed masses will be led, as they once were, into a shining future built on the blueprints of a deathless conspiracy.\n\n§rThe future only belongs to those who will live to see it.§!"
  
 
- an_drift:0 "Daily drift towards Anarcho-Liberalism"
-
  ss:0 "Radical Egalitarians"
  ss_noun:0 "Radical Egalitarians"
  ss_desc:0 "Representative State"
  SS_VARIANT_01:0 "§ORadical Egalitarianism§!"
  SS_VARIANT_01_desc:0 "\n\n£GFX_ideology_statesoc_banner\n\n\n\n§Y“The true citizen prefers the general advantage to his advantage.”§!\n-§OFrançois-Noël Babeuf§!\n\n§ORadical Egalitarianism§! or Babouvisme, is an ideology rooted in the ideas of François-Noël Babeuf, a literary theorist during the French Reformation. Though Revolutionary Republican thought at the time was far from unified, Babeuf dissented from the consensus by advocating a utopian egalitarian future built on democracy and the breaking down of hierarchical barriers.\n\nBabeuf's theories would develop after his death through successive theorists and thinkers, eventually culminating in the split between Orthodox and Revisionist branches of the ideology. Revisionists, emerging following the failure of Republicanism to sweep Europe after the Great War, argued that adherents must work incrementally within existing democratic systems to promote their ideals.\n\nThe Orthodox wing of the Babouvist movement continues to advocate for the revolutionary egalitarian struggle, while speciation of the ideology led to the development of German or British variations like §OKautskyism§! or the §OTechnolabourites§!."
- ss_drift:0 "Daily drift towards State Socialism"
 
  SS_VARIANT_02:0 "§OBakuninist Collectivism§!"
  SS_VARIANT_02_desc:0 "§OBakuninist Collectivism§! was developed largely as a reaction to the rise of Jacobinism. Developed by Russian revolutionary Mikhail Bakunin, Collectivism rejected the idea of a revolutionary vanguard proposed my most Jacobin theorists. Instead, Bakunin proposed the idea of an nearly stateless society, operating via direct democracy. In the wake of the bloody postwar Jacobin revolutions, many disenchanted socialists embraced Bakuninist Collectivism and its' ideals of revolutionary democracy and worker's self management."
@@ -309,8 +300,6 @@ DS_VARIANT_15:0 "§OEcclesiastical Militarism§!"
 
  JC_VARIANT_13:0 "§ORevolutionary Mysticism§!"
  JC_VARIANT_13_desc:0 "\n\n£GFX_ideology_jacobin_banner_12\n\n\n\n§Y“The Revolution is of spiritual essence.”§!\n-§OAntonin Artaud§!\n\n§ORevolutionary Mysticism§! represents both a practice within existing revolutionary movements and an ideology by itself. While such phenomenon might appear as a contemporary byproduct of a broader regain of interest toward irrationalism and the occult, its first occurrences can be traced back to the Reformation Era. \n\nAmidst the multitude of radical movements and political initiatives flourishing throughout Europe at this time, some would embrace ritualistic practices — with highly codified ceremonies, an emphasis put on secrecy and various considerations about faith, the human soul and metaphysics. Rooted either in Kabbalism, esoteric Christianity or theistic beliefs, these fellowships would eventually fall dormants as revolutionary enthusiasm vanished off. \n\nWhat could have been considered as an ephemeral and ultimately futile oddity eventually resurfaced in the late-nineteenth century. As capitalism sweeped mercilessly the old faiths to impose its mercantile rationality, a new dissenting esotericism arose to oppose both the old Order of the autocrats and the new techno-industrial hegemony. Diving into Eastern philosophy while drawing from romanticism and decadentism, Revolutionary Mysticism would slowly grow in importance over the course of the twentieth century — gaining enormous appeal as the Great War brought about mass delusion toward the sciences which allowed such bloodshed to occur. \n\nAs diverse as the hundreds of sects acting in its name, Revolutionary Mysticism  nonetheless holds true the tenet of the revolution not being a purely materialistic affair. Only through spiritual and collective renewal shall the individual reach the Nirvana of its emancipation."
- 
- jc_drift:0 "Daily drift towards Jacobinism"
  
 
 
@@ -1668,3 +1657,107 @@ DS_VARIANT_15:0 "§OEcclesiastical Militarism§!"
  # x_ds_party_long:0
  # x_ni_party:0
  # x_ni_party_long:0
+
+#####################################################
+##  NOT COLORED SUBIDEOLOGY NAMES USED IN CUSTOM GUI
+#####################################################
+CUSTOM_POLITICS_TEXT: "[GetIdeologyName]\n§g([GetSubideologyName])§!"
+
+
+NI_VARIANT_01_name: "Neo Imperialists"
+NI_VARIANT_02_name: "Ultranationalism"
+NI_VARIANT_03_name: "National Syndicalism"
+NI_VARIANT_04_name: "Clerical Ultranationalism"
+NI_VARIANT_05_name: "Revolutionary Nationalism"
+NI_VARIANT_06_name: "Neo-Colonialism"
+NI_VARIANT_07_name: "Ultramilitarism"
+NI_VARIANT_08_name: "Prussonationalism"
+NI_VARIANT_09_name: "Infinistocracy"
+NI_VARIANT_10_name: "Ultranationalist Mysticism"
+NI_VARIANT_11_name: "Martian Supremacism"
+NI_VARIANT_12_name: "Techno-Supremacism"
+NI_VARIANT_13_name: "INQUISITORIALISM"
+
+DS_VARIANT_01_name: "Despotists"
+DS_VARIANT_02_name: "Absolutism"
+DS_VARIANT_03_name: "Pan-African Nationalism"
+DS_VARIANT_04_name: "Pan-Arab Nationalism"
+DS_VARIANT_05_name: "Technocratic Despotism"
+DS_VARIANT_06_name: "Authoritarian Democracy"
+DS_VARIANT_07_name: "Bolivarian Democracy"
+DS_VARIANT_08_name: "Dominant Party Democracy"
+DS_VARIANT_09_name: "Orthodox Cosmism"
+DS_VARIANT_10_name: "Rasputinite Orthodoxy"
+DS_VARIANT_11_name: "Infinistocracy"
+DS_VARIANT_12_name: "Aristocratic Despotism"
+DS_VARIANT_13_name: "Absolutism"
+DS_VARIANT_14_name: "Techno-Janissaries"
+DS_VARIANT_15_name: "Ecclesiastical Militarism"
+
+RC_VARIANT_01_name: "Reactionary"
+RC_VARIANT_02_name: "Religious Fundamentalism"
+RC_VARIANT_03_name: "Ethno-Nationalism"
+RC_VARIANT_04_name: "Dominant Party Democracy"
+RC_VARIANT_05_name: "Social Credit"
+RC_VARIANT_06_name: "Infinistocracy"
+RC_VARIANT_07_name: "Ultra-Luddism"
+RC_VARIANT_08_name: "Lund Conservatism
+
+
+CN_VARIANT_01_name: "Conservative"
+CN_VARIANT_02_name: "Right Wing Populism"
+CN_VARIANT_03_name: "Progressive Conservatism"
+CN_VARIANT_04_name: "Dominant Party Democracy"
+CN_VARIANT_05_name: "Fiscal Conservatism"
+CN_VARIANT_06_name: "Orthodox Zionism"
+CN_VARIANT_07_name: "Conservative Agrarianism"
+CN_VARIANT_08_name: "Infinistocracy"
+CN_VARIANT_09_name: "Fatimism"
+
+LB_VARIANT_01_name: "Liberalism"
+LB_VARIANT_02_name: "Dominant Party Democracy"
+LB_VARIANT_03_name: "National Liberalism"
+LB_VARIANT_04_name: "Classical Liberalism"
+LB_VARIANT_05_name: "Guangdong Liberalism"
+LB_VARIANT_06_name: "Market Liberalism"
+LB_VARIANT_07_name: "Islamic Liberalism"
+LB_VARIANT_08_name: "Liberal Agrarianism"
+LB_VARIANT_09_name: "Narodism"
+LB_VARIANT_10_name: "Infinistocracy"
+
+AN_VARIANT_01_name: "Anarcho-Liberalism"
+AN_VARIANT_02_name: "Market Conservatism"
+AN_VARIANT_03_name: "Fordism"
+AN_VARIANT_04_name: "Dominant Party Democracy"
+AN_VARIANT_05_name: "Edisonian Conservatism"
+AN_VARIANT_06_name: "Corporatocracy"
+AN_VARIANT_07_name: "Infinistocracy"
+
+SS_VARIANT_01_name: "Radical Egalitarianism"
+SS_VARIANT_02_name: "Bakuninist Collectivism"
+SS_VARIANT_03_name: "Reformist Socialism"
+SS_VARIANT_04_name: "Agrarian Socialism"
+SS_VARIANT_05_name: "Kautskyism"
+SS_VARIANT_06_name: "Pan-Arab Socialism"
+SS_VARIANT_07_name: "Pan-African Socialism"
+SS_VARIANT_08_name: "Dominant Party Democracy"
+SS_VARIANT_09_name: "Labour Socialism"
+SS_VARIANT_10_name: "Labour Zionism"
+SS_VARIANT_11_name: "Left Narodism"
+SS_VARIANT_12_name: "Infinistocracy"
+SS_VARIANT_13_name: "Peripherism"
+SS_VARIANT_14_name: "Fraternal Egalitarianism"  
+
+JC_VARIANT_01_name: "Jacobinism"
+JC_VARIANT_02_name: "Revolutionary Anarchism"
+JC_VARIANT_03_name: "Revolutionary Imperialism"
+JC_VARIANT_04_name: "National Jacobinism"
+JC_VARIANT_05_name: "Classical Jacobinism"
+JC_VARIANT_06_name: "Kingoro Hashimoto Thought"
+JC_VARIANT_07_name: "Social Banditry"
+JC_VARIANT_08_name: "Transcendental Naturalism"
+JC_VARIANT_09_name: "Butlerism"
+JC_VARIANT_10_name: "Stratocratic Butlerism"
+JC_VARIANT_11_name: "Revolutionary Americanism"
+JC_VARIANT_12_name: "Directorial Jacobinism"
+JC_VARIANT_13_name: "Revolutionary Mysticism"
