--- a/localisation/english/PB_country_specific/PB_Spain_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_Spain_l_english.yml
@@ -29,8 +29,8 @@ SPR_lb_party_long:0 "Izquierdda Republicana"
 SPR_lb_party:0 "IR"
 SPR_an_party_long:0 "Partido Anarquista"
 SPR_an_party:0 "PA"
-SPR_ss_party_long:0 "Partido Socialista Obrero Español"
-SPR_ss_party:0 "PSOE"
+SPR_ss_party_long:0 "Partido por la Unión Cultural y Racial de Hispania"
+SPR_ss_party:0 "PUCRH"
 SPR_jc_party_long:0 "Sagrada Congregación para la Defensa de la Fe"
 SPR_jc_party:0 "SCDF"
 
