--- a/localisation/english/PB_News_Events_l_english.yml
+++ b/localisation/english/PB_News_Events_l_english.yml
@@ -1201,41 +1201,41 @@
   PBNews.306.d:0 "Once considered an underdog by many within America, the infamous Empire of Ayiti might be on the verge of a radical leap toward modernity. With large veins of silver discovered throughout the Northern country, the Ayitian people have awoken on top of a treasure of outstanding proportion — one envied by many throughout the continent. \n\nAs the Empire's once feeble economy already experienced massive growth and the need for proper infrastructures and workforce threaten to alter the very fabric of Ayitian society, investors from all corners of the globe hurry on this newborn Eldorado. Should the Empire allow such foreign incursions remain to be seen."
   PBNews.306.a:0 "A Shiny Miracle in the Land of Louverture"
   
-  PBNews.307.t:0 "LABOR UNREST ESCALATES IN CAP-HAÏTIEN"
-  PBNews.307.d:0 " "
-  PBNews.307.a:0 " "
+  PBNews.307.t:0 "LABOR UNREST IN CAP-HAÏTIEN"
+  PBNews.307.d:0 "As prosperity came to the small nation of Ayiti in the form of ample reserves of silver mineral, it appears such welfare didn't benefit all equally.\n\nAs heavy industries and infrastructural development have been prioritized, the newborn Ayitian proletariat has seemingly been left aside. Subjected to terrible labour conditions, the workers now threaten to put an halt to Ayiti's meteoric economic growth should the government persist in ignoring their plea for a sharing of the Grey Eldorado's blessing among all citizens.\n\nOnly time will tell if the Empire is able to handle this quasi-insurrectionary protest, or succumb to it."
+  PBNews.307.a:0 "The Grey Ore Shine with Red Hints"
   
-  PBNews.308.t:0 "AYITIAN ARMY QUELL REVOLUTIONARY FERVOR"
-  PBNews.308.d:0 " "
-  PBNews.308.a:0 " "
+  PBNews.308.t:0 "AYITIAN ARMY QUELL REVOLUTIONARIES"
+  PBNews.308.d:0 "Unwilling to correct the course of Ayiti's ruthless modernisation, the Cap-Haïtien's regime has resorted to the one and only method tried and tested when it comes about dealing with insurrectionary fervour.\n\nWith the Army stepping in with carte blanche for quelling the seditious elements, repression has quickly turned into a bloodbath as strikers has been systematically put down. Unprepared and unorganized for such display of violence, the protest has collapsed in no time — the remaining survivors either complying or going underground. While the Empire has been secured from the Red contagion, Ayiti's spirit may very much have trespassed along those shot in the streets."
+  PBNews.308.a:0 "Martyrs, Covered in Silver and Blood"
   
-  PBNews.309.t:0 "REPUBLIC OF AYITI PROCLAIMED — THE EMPEROR ON THE RUN"
-  PBNews.309.d:0 " "
-  PBNews.309.a:0 " "
+  PBNews.309.t:0 "REPUBLIC OF AYITI PROCLAIMED"
+  PBNews.309.d:0 "Shockwaves have been sent throughout the Caribbean as the Empire of Ayiti has officially been disbanded.\n\nParalyzed by its own contradictions, the regime has not been able to prevent the radicalization of the strikers which, inspired by republican elements within the labor movement, have been quick to proclaim a Social Republic in the Northern swaths of the country. Joined by a small peasantry disdainful toward the nation's recent opening to foreign trade, the revolutionaries have cemented a solid basis able to paralyze the country's logistics.\n\nWith the Army in disarray and the Emperor formally abdicating, the Republic has seemingly triumphed over its enemies."
+  PBNews.309.a:0 "Libète, Egalite, Fratènite"
   
   PBNews.310.t:0 "ARISTOCRATIC FROND TAKE OVER AYITI"
   PBNews.310.d:0 " "
-  PBNews.310.a:0 " "
+  PBNews.310.a:0 "Revolution Without Freedom nor Equality"
   
-  PBNews.311.t:0 "FOREIGN ASSETS TO BE NATIONALIZED IN AYITI"
+  PBNews.311.t:0 "AYITI: FOREIGN ASSETS TO BE NATIONALIZED"
   PBNews.311.d:0 " "
-  PBNews.311.a:0 " "
+  PBNews.311.a:0 "Philly's Shuddering"
   
-  PBNews.312.t:0 "PHILADELPHIA-BACKED INTERVENTION OVERTHROW PORT-AU-PRINCE'S REGIME"
+  PBNews.312.t:0 "PORT-AU-PRINCE'S REGIME OVERTHROWN"
   PBNews.312.d:0 " "
-  PBNews.312.a:0 " "
+  PBNews.312.a:0 "The Free Market Claims yet Another Victim"
   
-  PBNews.313.t:0 "AGREEMENT REACHED BETWEEN PHILADELPHIA AND PORT-AU-PRINCE"
-  PBNews.313.d:0 " "
-  PBNews.313.a:0 " "
+  PBNews.313.t:0 "UCA AND AYITI RECONCILE"
+  PBNews.313.d:0 "In a strange twist of fate, the United Commonwealth and Ayitian officials have reached an historical agreement involving both military and economic cooperation between the two nations. Once at odds with each others due to Philadelphia's alleged interferences with Cap-Haïtien's regime in the past, both contenders have been able to set aside their differences nonetheless.\n\nObviously enough, it seems the shared disdain toward the Latin Viceroyalties was stronger than former animosity, and has therefore cemented this strange, yet expectable, partnership. New Granada's embassy in Philadelphia has remained silent about the event."
+  PBNews.313.a:0 "The Enemy of my Enemy is my Friend"
   
-  PBNews.314.t:0 "ALLEGED MILITARY ESCALATION IN HISPANIOLA"
+  PBNews.314.t:0 "MILITARY ESCALATION IN HISPANIOLA"
   PBNews.314.d:0 " "
-  PBNews.314.a:0 " "
+  PBNews.314.a:0 "Caribbean Waters Boils"
   
-  PBNews.315.t:0 "WAR BREAK OUT IN HISPANIOLA"
+  PBNews.315.t:0 "WAR BREAKS OUT IN HISPANIOLA"
   PBNews.315.d:0 " "
-  PBNews.315.a:0 " "
+  PBNews.315.a:0 "Hundred Years of Rivalry, Now Settled in Blood"
 
   stockcrisis.1.t:0 "The Stock Crisis hits the Empire"
   stockcrisis.1.d:0 ""
