Italian Infantry GFX

--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -3,6 +3,7 @@
 #VICTORY POINTS BELOW ARE SORTED ALPHABETICALLY BY STATE, PLEASE FOLLOW THIS
 #1 - CORSICA
  VICTORY_POINTS_3838: "Ajáccio"
+ VICTORY_POINTS_9851: "Bastia"
 #2 - LATIUM
  VICTORY_POINTS_15803: "Anzio"
  VICTORY_POINTS_11751: "  Civitavecchia"
