Italian VPS, Ports and Buffs

--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -379,6 +379,7 @@
  VICTORY_POINTS_12003: "Valletta"
 #117 - CAMPANIA
  VICTORY_POINTS_819: "Naples"
+ VICTORY_POINTS_955: "Salerno"
 #118 - GIBRALTAR
  VICTORY_POINTS_4135: "Gibraltar"
  VICTORY_POINTS_10749: "Tarifa"
@@ -535,8 +536,10 @@
  VICTORY_POINTS_3780: "Milan"
 #160 - VENETO
  VICTORY_POINTS_11584: "Venice"
+ VICTORY_POINTS_603: "Verona"
 #161 - ROMAGNA
  VICTORY_POINTS_6606: "Bologna"
+ VICTORY_POINTS_782: "Ravenna"
 #162 - TUSCANY
  VICTORY_POINTS_9907: "Florence"
  VICTORY_POINTS_6973: "La Spezia"
@@ -3376,6 +3379,12 @@
  VICTORY_POINTS_15790: "Port Hesus"
 #1422 - BOHUSLAN
  VICTORY_POINTS_6310: "Uddevalla"
+
+#1432 - Umbria
+ VICTORY_POINTS_6926: "Perugia"
+
+#1433 - Lucania
+ VICTORY_POINTS_6972: "Potenza"
 
 
  VICTORY_POINTS_4801: "Urga"
