--- a/localisation/english/PB_social_development_l_english.yml
+++ b/localisation/english/PB_social_development_l_english.yml
@@ -1,153 +1,24 @@
 ﻿l_english:
-	## Categories
-		PB_social_development_categories: "Social Development"
-		# Poverty Rate
-			social_development_category_poverty: "Poverty Rate"
-			social_development_category_poverty_level_0: "Overwhelming Poverty"
-			social_development_category_poverty_level_0_desc: "Overwhelming Poverty Description"
-			social_development_category_poverty_level_1: "Rampant Poverty"
-			social_development_category_poverty_level_1_desc: "Rampant Poverty Description"
-			social_development_category_poverty_level_2: "Widespread Poverty"
-			social_development_category_poverty_level_2_desc: "Widespread Poverty Description"
-			social_development_category_poverty_level_3: "Noticeable Poverty"
-			social_development_category_poverty_level_3_desc: "Noticeable Poverty Description"
-			social_development_category_poverty_level_4: "Limited Poverty"
-			social_development_category_poverty_level_4_desc: "Limited Poverty Description"
-		# Industrialization
-			social_development_category_industrialization: "Industrialization"
-			social_development_category_industrialization_level_0: "Subsistence Agriculture"
-			social_development_category_industrialization_level_0_desc: "Subsistence Agriculture Description"
-			social_development_category_industrialization_level_1: "Agrarianism"
-			social_development_category_industrialization_level_1_desc: "Agrarianism Description"
-			social_development_category_industrialization_level_2: "Semi-Industrialized"
-			social_development_category_industrialization_level_2_desc: "Semi-Industrialized Description"
-			social_development_category_industrialization_level_3: "Industrialized"
-			social_development_category_industrialization_level_3_desc: "Industrialized Description"
-			social_development_category_industrialization_level_4: "Post-Industrial State"
-			social_development_category_industrialization_level_4_desc: "Post-Industrial State Description"
-		# Literacy Rate
-			social_development_category_literacy: "Literacy Rate"
-			social_development_category_literacy_level_0: "Overwhelming Illiteracy"
-			social_development_category_literacy_level_0_desc: "Overwhelming Illiteracy Description"
-			social_development_category_literacy_level_1: "Rampant Illiteracy"
-			social_development_category_literacy_level_1_desc: "Rampant Illiteracy Description"
-			social_development_category_literacy_level_2: "Significant Illiteracy"
-			social_development_category_literacy_level_2_desc: "Significant Illiteracy Description"
-			social_development_category_literacy_level_3: "No Major Illiteracy"
-			social_development_category_literacy_level_3_desc: "No Major Illiteracy Description"
-			social_development_category_literacy_level_4: "Illiteracy Abolished"
-			social_development_category_literacy_level_4_desc: "Illiteracy Abolished Description"
-		# Economic Health
-			social_development_category_economic_health: "Economic Health"
-			social_development_category_economic_health_level_0: "Apocalyptic Collapse"
-			social_development_category_economic_health_level_0_desc: "Apocalyptic Collapse Description"
-			social_development_category_economic_health_level_1: "Market Panic"
-			social_development_category_economic_health_level_1_desc: "Market Panic Description"
-			social_development_category_economic_health_level_2: "Underperforming Economy"
-			social_development_category_economic_health_level_2_desc: "Underperforming Economy Description"
-			social_development_category_economic_health_level_3: "Stagnant Economy"
-			social_development_category_economic_health_level_3_desc: "Stagnant Economy Description"
-			social_development_category_economic_health_level_4: "Middling Consumer Confidence"
-			social_development_category_economic_health_level_4_desc: "Middling Consumer Confidence Description"
-			social_development_category_economic_health_level_5: "Very Strong Consumer Confidence"
-			social_development_category_economic_health_level_5_desc: "Very Strong Consumer Confidence Description"
-		# Westernization
-			social_development_category_westernization: "Westernization"
-			social_development_category_westernization_level_0: "Uncivilized Nation"
-			social_development_category_westernization_level_0_desc: "Uncivilized Nation Description"
-			social_development_category_westernization_level_1: "Partially Westernized Nation"
-			social_development_category_westernization_level_1_desc: "Partially Westernized Nation Description"
-			social_development_category_westernization_level_2: "Fully Westernized Nation"
-			social_development_category_westernization_level_2_desc: "Fully Westernized Nation Description"
-		# Military Modernization
-			social_development_category_military_modernization: "Military Modernization"
-			social_development_category_military_modernization_level_0: "Pre Great War Military"
-			social_development_category_military_modernization_level_0_desc: "Pre Great War Military Description"
-			social_development_category_military_modernization_level_1: "Great War Era Military"
-			social_development_category_military_modernization_level_1_desc: "Great War Era Military Description"
-			social_development_category_military_modernization_level_2: "Semi Modernized Military"
-			social_development_category_military_modernization_level_2_desc: "Semi Modernized Military Description"
-			social_development_category_military_modernization_level_3: "Fully Modernized Military"
-			social_development_category_military_modernization_level_3_desc: "Fully Modernized Military Description"
-	## Social Development Side Menu GUI
-		PB_social_development_menu_title_text: "$PB_social_development_categories$"
-		# Tooltips
-			PB_social_development_progress_bar_tt: "Our current §YDevelopment Level§! in §Y[GetSocialDevelopmentName]§! is [GetSocialDevelopmentLevelName]. We have [GetSocialDevelopmentProgressDifference]% left to progress to the next §YDevelopment Level§! in §Y[GetSocialDevelopmentName]§!."
-			PB_social_development_monthly_change_tt: "Our current rate of §[GetSocialDevelopmentProgressionRegression]§! in §Y[GetSocialDevelopmentName]§! is [?category_monthly_change|+=%]."
-			PB_social_development_monthly_change_tt: "Click to view all §YDevelopment Levels§!."
-			PB_social_development_info_tt: "§YSocial Development§! is a rough metric of various factors in a country.\n\nDecisions made throughout the campaign will §Gpositively§! or §Rnegatively§! affect the rate at which social progress is made. At §Cmaximum§! level, development will no longer increase. Development can top off at either 100% or 0%. If a development level is not already at maximum, it will increase to the next development level. If a development level reaches -100%, it will regress to the previous level unless at the lowest possible level."
-			PB_social_development_progress_progression: "Gprogression"
-			PB_social_development_progress_progression: "Rreogression"
-	## Social Development Map Mode
-		# Map Mode Proper
-			MAPMODE_SOCIAL_DEVELOPMENT_MAP_MODE_NAME: "Social Development" 
-			MAPMODE_SOCIAL_DEVELOPMENT_MAP_MODE: "§YSocial Development Map Mode§!"
-			MAPMODE_SOCIAL_DEVELOPMENT_MAP_MODE_DESCRIPTION: "View the §Ysocial development§! levels of other countries through a toggle on the right hand side."
-			social_development_map_mode_tooltip: "[FROM.GetName] - [FROM.GetSocialDevelopmentNameMapMode] - [FROM.GetSocialDevelopmentLevelNameMapMode]"
-			social_development_map_mode_tooltip_delayed: ""
-		# Map Mode Toggle GUI
-			toggle_social_development_map_mode_button_tt: ""
-	## Events
-		# Social Development Worsens
-			PB_social_development.10.t: "Poverty Rate Worsens"
-			PB_social_development.10.d: "Across the country, destitution has become increasingly commonplace. Jobs have all but dried up in some areas, and many wander the streets looking for any work they can find. It's clear to the government that our policies have increased poverty across the country, dramatically impacting economic health and reducing standards of living. We must do what we can to try and remedy this."
-			PB_social_development.10.a: "Oh no."
 
-			PB_social_development.11.t: "Industrialization Worsens"
-			PB_social_development.11.d: "In the cities, factories lie increasingly empty. Apartment blocks that once thrummed with life are now deathly quiet. More and more, our people look to the agrarian lifestyle for stability and comfort. The economy suffers as the pastoral lifestyle that so many people once lived by becomes more and more commonplace. Our industry will suffer greatly from this social shift, but our agricultural base will benefit from the change."
-			PB_social_development.11.a: "We must reject modernity."
+	socdev_menu_button_tt: "Click to open the §YSocial Development§! menu"
 
-			PB_social_development.12.t: "Literacy Rate Worsens"
-			PB_social_development.12.d: "Classrooms lie empty, books sit abandoned on desks, and most people across the country have abandoned the need for higher education. Rural areas languish as even adults lack the capacity for basic reading comprehension, and their children will fare little better as books are tossed aside for menial labor. This will greatly impact our country's capacity to industrialize and will lead to a gradual increase in poverty."
-			PB_social_development.12.a: "Work is more important than Learning"
+  social_development_poverty_rate_progress_tt: "Our §YPoverty Status§!:\nHas a value of §H[?social_development_poverty_rate_count|+%%]§! and is [get_poverty_rate_growth_type]\nIt is [get_progress_regress_poverty_rate] at a §Ybase monthly rate§! of [?social_development_poverty_rate_monthly_change|=+%%] and additional [?modifier@social_development_poverty_rate_growth_monthly|=+%%] from modifiers towards §Y[get_next_previous_poverty_rate]§!."
+	social_development_industrialization_progress_tt: "Our §YIndustrialization§!:\nHas a value of §H[?social_development_industrialization_count|+%%]§! and is [get_industrialization_growth_type]\nIt is [get_progress_regress_industrialization] at a §Ybase monthly rate§! of [?social_development_industrialization_monthly_change|=+%%] and additional [?modifier@social_development_industralization_growth_monthly|=+%%] from modifiers towards §Y[get_next_previous_industrialization]§!."
+	social_development_literacy_progress_tt: "Our §YLiteracy§!:\nHas a value of §H[?social_development_literacy_count|+%%]§! and is [get_literacy_growth_type]\nIt is [get_progress_regress_literacy] at a §Ybase monthly rate§! of [?social_development_literacy_monthly_change|=+%%] and additional [?modifier@social_development_literacy_growth_monthly|=+%%] from modifiers towards §Y[get_next_previous_literacy]§!."
+	social_development_economic_health_progress_tt: "Our §YEconomic Health§!:\nHas a value of §H[?social_development_economic_health_count|+%%]§! and is [get_economic_health_growth_type]\nIt is [get_progress_regress_economic_health] at a §Ybase monthly rate§! of [?social_development_economic_health_monthly_change|=+%%] and additional [?modifier@social_development_economic_health_growth_monthly|=+%%] from modifiers towards §Y[get_next_previous_economic_health]§!."
+	social_development_military_modernization_progress_tt: "Our §YMilitary Modernization§!:\nHas a value of §H[?social_development_military_modernization_count|+%%]§! and is [get_military_modernization_growth_type]\nIt is [get_progress_regress_military_modernization] at a §Ybase monthly rate§! of [?social_development_military_modernization_monthly_change|=+%%] and additional [?modifier@social_development_military_modernization_growth_monthly|=+%%] from modifiers towards §Y[get_next_previous_military_modernization]§!."
+	social_development_civilization_status_progress_tt: "Our §YCivilization Level§!:\nHas a value of §H[?social_development_civilization_status_count|+%%]§! and is [get_civilization_status_growth_type]\nIt is [get_progress_regress_civilization_status] at a §Ybase monthly rate§! of [?social_development_civilization_status_monthly_change|=+%%] and additional [?modifier@social_development_civilization_status_growth_monthly|=+%%] from modifiers towards §Y[get_next_previous_civilization_status]§!."
 
-			PB_social_development.13.t: "Economic Health Worsens"
-			PB_social_development.13.d: "PLACEHOLDER"
-			PB_social_development.13.a: "Guess money ain't worth as much anymore."
+	socdev_progressing: "§GProgressing§!"
+	socdev_regressing: "§RRegressing§!"
 
-			PB_social_development.14.t: "Westernization Worsens"
-			PB_social_development.14.d: "PLACEHOLDER"
-			PB_social_development.14.a: "PLACEHOLDER"
+	socdev_stagnant_growth: "§6Stagnant§!"
+	socdev_slow_progress: "§GProgressing Slowly§!"
+	socdev_moderate_progress: "§GProgressing Moderately§!"
+	socdev_rapid_progress: "§GProgressing Rapidly§!"
+	socdev_slow_regress: "§RRegressing Slowly§!"
+	socdev_moderate_regress: "§RRegressing Moderately§!"
+	socdev_rapid_regress: "§RRegressing Rapidly§!"
 
-			PB_social_development.15.t: "Military Modernization Worsens"
-			PB_social_development.15.d: "PLACEHOLDER"
-			PB_social_development.15.a: "\"Sir, yes Sir!\""
-		# Social Development Improves
-			PB_social_development.20.t: "Poverty Rate Improves"
-			PB_social_development.20.d: "Thanks to our national policies, the country's overall rate of poverty has substantially decreased. Joblessness has been lessened, and standards of living have dramatically improved for the lower class. Slums have begun to gradually empty out, and the crime rate has been impacted substantially by this national shift."
-			PB_social_development.20.a: "Great!"
-
-			PB_social_development.21.t: "Industrialization Improves"
-			PB_social_development.21.d: "Factories hum to life, coal is shoveled into boilers and thousands migrate to the cities to pursue new work. Industry has greatly expanded and brought with it all the benefits and curses that it can provide. As agriculture is modernized and mechanized, more and more people look to cities and towns for work, bringing with them the tools and talent needed for a hungry economy. Though this will impact our agricultural base, it will greatly increase our nation's industrial capacity."
-			PB_social_development.21.a: "Modernism is the way of the future."
-
-			PB_social_development.22.t: "Literacy Rate Improves"
-			PB_social_development.22.d: "Classrooms fill with eager children across our country, ready to learn. Our policies have greatly increased literacy nationwide. Programs in poverty-stricken areas have helped many adults in rural areas go from illiterate to reading at an acceptable level. This increase in national brainpower will help to improve our industrial and economic base as more of the population can make better decisions and learn at a faster rate."
-			PB_social_development.22.a: "Writing is the cornerstone of civilization"
-
-			PB_social_development.23.t: "Economic Health Improves"
-			PB_social_development.23.d: "PLACEHOLDER"
-			PB_social_development.23.a: "The better the market, the freer the people!"
-
-			PB_social_development.24.t: "Westernization Improves"
-			PB_social_development.24.d: "The nation has progressed further on the path to modern, western civilization. Old tribal and gerontocratic practices are being abandoned more and more for Western-style cultural mainstays. Communities become more and more reliant on modern agricultural methods, while some move to the new industrial capitals where smog now chokes the once empty skies. Old ideas fall to the wayside as a new generation looks to Europe for the future.\n\nOur nation shifts further towards becoming a modern, industrial and most importantly Westernized state."
-			PB_social_development.24.a: "Civilization, Ho!"
-
-			PB_social_development.25.t: "Military Modernization Improves"
-			PB_social_development.25.d: "PLACEHOLDER"
-			PB_social_development.25.a: "PLACEHOLDER"
-	## Scripted Effects/Triggers Tooltips
-		# Effects
-			PB_social_development_progress_adjust_tt: "Our progress to the next §YDevelopment Level§! in §Y[GetSocialDevelopmentName]§! will §[GetSocialDevelopmentProgressIncreaseDecrease]§! by [?amount].\n"
-			PB_social_development_progress_decrease: "Rdecrease"
-			PB_social_development_progress_increase: "Gincrease"
-		# Triggers
-			PB_has_social_development_progress_tt: "Our progress to the next §YDevelopment Level§! in §Y[GetSocialDevelopmentName]§! is[?comp_type.GetTokenLocalizedKey] [?amount].\n"
-			PB_has_social_development_progress_tt: "Our §YDevelopment Level§! in §Y[GetSocialDevelopmentName]§! is[?comp_type.GetTokenLocalizedKey] [?amount]."
-			PB_has_social_development_level_tt: "[?amount]"
-			equals: " exactly"
-			not_equals: "n't"
-			less_than: " less than"
-			less_than_or_equals: " no more than"
-			greater_than: " more than"
-			greater_than_or_equals: " at least"
+	socdev_minimal_level: "§RMinimal Possible Level§!"
+	socdev_maximum_level: "§GMaximum Possible Level§!"
