--- a/localisation/english/PB_factions_l_english.yml
+++ b/localisation/english/PB_factions_l_english.yml
@@ -30,6 +30,7 @@
   PAF:0 "Portuguese Empire"
   EGF:0 "Red Sea Accord"
   TRF:0 "Associated Lands of the Immutable Sublime Porte"
+  HSP:0 "Supreme Junta of the Indies"
 
   FACTION_IMPERIAL_POWERS:0 "§YMember of the Imperial Powers Alliance§!"
   FACTION_IMPERIAL_POWERS_LONG:0 "This nation is a member of the §YImperial Powers§!, the remnant of the Anglo-German Alliance during the Great War. Founded originally by the German Empire, the leadership of the Imperial Powers shifted towards London following the end of hostilities and the European Economic Crash. A shadow of its' former self, the Imperial Powers is now little more than a mutual defense alliance between the British Commonwealths and their aligned states."
