Gun names for Spain and Italy + Doctrine Loc

--- a/localisation/english/replace/PB_replace_l_english.yml
+++ b/localisation/english/replace/PB_replace_l_english.yml
@@ -143,6 +143,21 @@
 
 
   ##########################
+  # Technologies
+  ##########################
+ cat_mobile_warfare_research:0 "Supremacy of Steel Doctrine"
+ cat_superior_firepower_research:0 "Fire and Fury Doctrine"
+ cat_grand_battle_plan_research:0 "Cult of the Offensive Doctrine"
+ cat_mass_assault_research:0 "Supremacy of Flesh Doctrine"
+
+ cat_mobile_warfare:0 "Supremacy of Steel Doctrine"
+ cat_superior_firepower:0 "Fire and Fury Doctrine"
+ cat_grand_battle_plan:0 "Cult of the Offensive Doctrine"
+ cat_mass_assault:0 "Supremacy of Flesh Doctrine"
+
+
+
+  ##########################
   # CAREER PROFILE
   ##########################
   CAREER_PROFILE_LARGEST_TANKS_BATTLE_LABEL:0 "Most landships in battle"
