--- a/localisation/english/replace/vanilla_modifiericons_l_english.yml
+++ b/localisation/english/replace/vanilla_modifiericons_l_english.yml
@@ -1441,10 +1441,10 @@
  MODIFIER_AIR_POWER_PROJECTION_FACTOR:0 "£power_projection_texticon  Air power projection factor"
  MODIFIER_AIR_CARRIER_NIGHT_PENALTY_REDUCTION_FACTOR:0 "£night_texticon  Carrier night penalty reduction"
  MODIFIER_ARMY_ADVISOR_COST_FACTOR:0 "£army_advisor_cost_texticon  Army Advisor Cost"
- cat_mobile_warfare_cost_factor:0 "£army_doctrine_cost_texticon  Mobile Warfare Doctrine Cost"
- cat_superior_firepower_cost_factor:0 "£army_doctrine_cost_texticon  Superior Firepower Doctrine Cost"
- cat_grand_battle_plan_cost_factor:0 "£army_doctrine_cost_texticon  Grand Battleplan Doctrine Cost"
- cat_mass_assault_cost_factor:0 "£army_doctrine_cost_texticon  Mass Assault Doctrine Cost"
+ cat_mobile_warfare_cost_factor:0 "£army_doctrine_cost_texticon  Supremacy of Steel Doctrine Cost"
+ cat_superior_firepower_cost_factor:0 "£army_doctrine_cost_texticon Fire and Fury Doctrine Cost"
+ cat_grand_battle_plan_cost_factor:0 "£army_doctrine_cost_texticon  Cult of the Offensive Doctrine Cost"
+ cat_mass_assault_cost_factor:0 "£army_doctrine_cost_texticon  Supremacy of Flesh Doctrine Cost"
  cat_strategic_destruction_cost_factor:0 "£air_doctrine_cost_texticon  Strategic Destruction Doctrine Cost"
  cat_battlefield_support_cost_factor:0 "£air_doctrine_cost_texticon  Battlefield Support Doctrine Cost"
  cat_operational_integrity_cost_factor:0 "£air_doctrine_cost_texticon  Operational Integrity Doctrine Cost"
