--- a/localisation/english/PB_equipment_country_variants_l_english.yml
+++ b/localisation/english/PB_equipment_country_variants_l_english.yml
@@ -136,3 +136,38 @@
 
  MEX_infantry_equipment_4:0 "Asalto Rifle HM-4XXII"
  MEX_infantry_equipment_4_short:0 "HM-4XXII"
+
+  ## ITA
+
+ ITA_infantry_equipment_0:0 "Fucile Carcano Modello 1891"
+ ITA_infantry_equipment_0_short:0 "Carcano Mod. 91"
+
+ ITA_infantry_equipment_1:0 "Moschetto Carcano Modello 1891/24"
+ ITA_infantry_equipment_1_short:0 "Carcano Mod. 24"
+
+ ITA_infantry_equipment_2:0 "Beretta Modello 1938"
+ ITA_infantry_equipment_2_short:0 "Beretta Mod. 38"
+
+ ITA_infantry_equipment_3:0 "Beretta Modello 1938/42"
+ ITA_infantry_equipment_3_short:0 "Beretta Mod. 42"
+
+ ITA_infantry_equipment_4:0 "Beretta Fucile Sperimentale Avanzato Modello 1944"
+ ITA_infantry_equipment_4_short:0 "Beretta F.S.A. Mod. 44"
+
+
+  ## SPR
+
+ SPR_infantry_equipment_0:0 "Fusil De Carga Automática Modelo 98"
+ SPR_infantry_equipment_0_short:0 "Fusil de 1898"
+
+ SPR_infantry_equipment_1:0 "Fusil De Carga Automática Modelo 1919"
+ SPR_infantry_equipment_1_short:0 "Fusil de 1919"
+
+ SPR_infantry_equipment_2:0 "Star Fusil Automático Pesado Modelo 1927"
+ SPR_infantry_equipment_2_short:0 "Fusil Automático Pesado"
+
+ SPR_infantry_equipment_3:0 "Star Model Z-37"
+ SPR_infantry_equipment_3_short:0 "Z-37"
+
+ SPR_infantry_equipment_4:0 "Star Arma De Energía 'Armenergía'"
+ SPR_infantry_equipment_4_short:0 "Armenergía"
