Lot of Balancing Improvement to Generic Mil Tree

--- a/localisation/english/PB_Generic_Focus_l_english.yml
+++ b/localisation/english/PB_Generic_Focus_l_english.yml
@@ -157,7 +157,7 @@ PB_Designated_Aircraft_Production_Facilities: "Designated Aircraft Production Fa
 
 PB_Prep_For_Naval_Targeting: "Preparation for Naval Targeting"
 
-PB_Purchase_Foreign_Planes: "Purchase Planes Internationally"
+PB_Invest_Transport_Planes: "Strengthen the Transport Fleet"
 
 PB_AIR_At_The_Ready: "Air At the Ready"
 
