Prussia Infra Names

--- a/localisation/english/PB_equipment_country_variants_l_english.yml
+++ b/localisation/english/PB_equipment_country_variants_l_english.yml
@@ -171,3 +171,20 @@
 
  SPR_infantry_equipment_4:0 "Star Arma De Energía 'Armenergía'"
  SPR_infantry_equipment_4_short:0 "Armenergía"
+
+  ## PRS
+
+ PRS_infantry_equipment_0:0 "Infanteriegewehr Model 1888"
+ PRS_infantry_equipment_0_short:0 "Gewehr 88"
+
+ PRS_infantry_equipment_1:0 "Schweres Infanteriegewehr Model 1917"
+ PRS_infantry_equipment_1_short:0 "Gewehr 17"
+
+ PRS_infantry_equipment_2:0 "Sturmjägergewehr Model 1937"
+ PRS_infantry_equipment_2_short:0 "Sturmjägergewehr"
+
+ PRS_infantry_equipment_3:0 "Jägerfaust Model 1941"
+ PRS_infantry_equipment_3_short:0 "Jägerfaust"
+ 
+ PRS_infantry_equipment_4:0 "Jägerfaust(M) Model 1943"
+ PRS_infantry_equipment_4_short:0 "Jägerfaust(M)"
