temporary custom hungarian infantry gfx

--- a/localisation/english/PB_equipment_country_variants_l_english.yml
+++ b/localisation/english/PB_equipment_country_variants_l_english.yml
@@ -188,3 +188,20 @@
  
  PRS_infantry_equipment_4:0 "Jägerfaust(M) Model 1943"
  PRS_infantry_equipment_4_short:0 "Jägerfaust(M)"
+
+  ## HUN
+
+ HUN_infantry_equipment_0:0 "Gyalogsági Ismétlő Puska M95"
+ HUN_infantry_equipment_0_short:0 "Puska M95"
+
+ HUN_infantry_equipment_1:0 "FÉG Puska M18"
+ HUN_infantry_equipment_1_short:0 "Puska M18"
+
+ HUN_infantry_equipment_2:0 "Frommer Gyalogság Öntöltő puska M26"
+ HUN_infantry_equipment_2_short:0 "Puska M26"
+
+ HUN_infantry_equipment_3:0 "Gyalogsági Automata Puska M31"
+ HUN_infantry_equipment_3_short:0 "Puska M31"
+ 
+ HUN_infantry_equipment_4:0 "Irányított Energiapuska 4"
+ HUN_infantry_equipment_4_short:0 "IEP-4"
