RLP starting name change

--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -8874,9 +8874,9 @@
     TVI_DEF:0 "the Dominion of Terravictoria"
     TVI_ADJ:0 "Terravictorian"
 
-    RLP:0 "Free Settlements"
-    RLP_DEF:0 "The Free Settlements of the Rio de La Plata"
-    RLP_ADJ:0 "Rio La Platan"
+    RLP:0 "Viceroyalty of the Río de la Plata"
+    RLP_DEF:0 "The Viceroyalty of the Río de la Plata"
+    RLP_ADJ:0 "Platinean"
 
     NWL:0 "New Wales"
     NWL_DEF:0 "New Wales"
