Spanish American OOB & supply

--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -303,7 +303,7 @@
  STATE_302: "La Paz"
  STATE_303: "Lima"
  STATE_304: "Amapa"
- STATE_305: "Ecuador"
+ STATE_305: "Quito"
  STATE_306: "Cundinamarca"
  STATE_307: "Miranda"
  STATE_308: "Leeward Islands"
@@ -491,7 +491,7 @@
  STATE_490: "Pastaza"
  STATE_491: "Loreto"
  STATE_492: "Arequipa"
- STATE_493: "La Libertad"
+ STATE_493: "Antioquia"
  STATE_494: "Ucayali"
  STATE_495: "Santarém"
  STATE_496: "Diamantina"
