socdev mapmode, megacorp fix

--- a/localisation/english/PB_Culture_l_english.yml
+++ b/localisation/english/PB_Culture_l_english.yml
@@ -393,6 +393,7 @@ PB_culture_277: "Arpitan"
 PB_culture_13: "Dutch"
 PB_culture_14: "Flemish"
 PB_culture_15: "Walloon"
+PB_culture_294: "Frisian"
 
 # GERMANY #
 PB_culture_16: "West-Prussian"
