--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -1019,7 +1019,7 @@
  STATE_1018: "Dalarna"
  STATE_1019: "Jämtland"
  STATE_1020: "Västerbotten"
- STATE_1021: "Åbo"
+ STATE_1021: "Egentliga Finland"
  STATE_1022: "Tavastland"
  STATE_1023: "Liguria"
  STATE_1024: "Apulia"
