african VP and supply tweaks

--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -2335,6 +2335,7 @@
 #805 - KOUROUSSA
 #806 - AGADEZ
 #807 - REGUIBAT
+ VICTORY_POINTS_15163: "Tindouf"
 #808 - INCHIRI
  VICTORY_POINTS_10869: "Nouakchott"
 #809 - FRANCHE-COMTÉ
@@ -2469,6 +2470,7 @@
  VICTORY_POINTS_4972: "Kano"
  VICTORY_POINTS_1891: "Sokoto"
 #861 - AZAWAD
+ VICTORY_POINTS_7954: "Gao"
 #862 - BIAFRA
  VICTORY_POINTS_8034: "Enugu"
 #863 - OYO
@@ -2623,6 +2625,7 @@
 #921 - OROL
 #922 - SOUTH CARNEGIA
  VICTORY_POINTS_13237: "Mellonville"
+ VICTORY_POINTS_15141: "Chegga"
 #923 - FRIAUL
  VICTORY_POINTS_9613: "Weiden"
 #924 - NÉMA
@@ -2630,6 +2633,7 @@
  VICTORY_POINTS_4927: "Bamako"
 #926 - SELIBABY
 #927 - LABE
+ VICTORY_POINTS_2012: "Kayes"
 #928 - ZIGUINCHAR
 #929 - TAGANT
 #930 - ADRAR
